--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.10.13",
     "@next/font": "^13.0.2",
+    "cross-env": "^7.0.3",
+    "date-fns": "^2.29.3",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
