--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.13",
     "@next/font": "^13.0.2",
     "cross-env": "^7.0.3",
     "date-fns": "^2.29.3",
     "next": "13.0.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "simplebar-react": "^2.4.3"
   },
   "devDependencies": {
     "@types/node": "18.11.9",
