--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@next/font": "^13.0.2",
     "cross-env": "^7.0.3",
     "date-fns": "^2.29.3",
+    "hamburger-react": "^2.5.0",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
