--- a/package.json
+++ b/package.json
@@ -3,10 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --dir src",
+    "prettier": "npx prettier --write .",
+    "postinstall": "prisma generate",
+    "// db:generate": "// geneates new javascript client for current schema",
+    "db:generate": "prisma generate",
+    "// db:push": "// push changes to dev without a migration",
+    "db:push": "npx prisma db push",
+    "// db:migrate": "// creates migration scripts from schema and applies them to the database, uses shadow db",
+    "db:migrate": "npx prisma migrate dev",
+    "// db:draft": "// creates a new migration script based on changes to schema but doesnt apply it (for manually editing the migration script)",
+    "db:draft": "npx prisma migrate dev --create-only",
+    "// db:deploy": "// applies pending migrations, for production db",
+    "db:deploy": "npx prisma migrate deploy",
+    "db:reset": "npx prisma migrate reset",
+    "db:seed": "npx prisma db seed --preview-feature",
+    "//db:seed:icpsr": "// yarn run ts-node ./scripts/import_icpsr",
+    "db:seed:members": "yarn run seed:icpsr",
+    "studio": "npx prisma studio",
+    "//ts-node": "/// ts-node --compiler-options \"{\\\"module\\\":\\\"commonjs\\\"}\"",
+    "latest": "yarn upgrade-interactive --latest",
+    "unused": "npx depcheck --ignore-patterns=doc",
+    "cypress": "cypress open",
+    "test:open": "cypress open",
+    "test:run": "cypress run",
+    "script": "ts-node --project ./node.tsconfig.json"
   },
   "dependencies": {
     "@emotion/cache": "^11.10.5",
@@ -16,12 +40,14 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.13",
     "@next/font": "^13.0.2",
+    "@prisma/client": "^4.6.1",
     "cross-env": "^7.0.3",
     "date-fns": "^2.29.3",
     "hamburger-react": "^2.5.0",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^8.0.3",
     "simplebar-react": "^2.4.3"
   },
   "devDependencies": {
@@ -32,6 +58,7 @@
     "eslint-config-next": "13.0.2",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "2.7.1",
+    "prisma": "^4.6.1",
     "typescript": "4.8.4"
   }
 }
