--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.13",
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "^13.0.2",
     "@prisma/client": "^4.6.1",
     "cross-env": "^7.0.3",
     "date-fns": "^2.29.3",
     "hamburger-react": "^2.5.0",
     "next": "13.0.2",
+    "next-auth": "^4.17.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.3",
